; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hwpmc/extr_hwpmc_armv7.c_armv7_pcpu_fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hwpmc/extr_hwpmc_armv7.c_armv7_pcpu_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmc_mdep = type { i32 }

@ARMV7_PMNC_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pmc_mdep*, i32)* @armv7_pcpu_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @armv7_pcpu_fini(%struct.pmc_mdep* %0, i32 %1) #0 {
  %3 = alloca %struct.pmc_mdep*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.pmc_mdep* %0, %struct.pmc_mdep** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @cp15_pmcr_get()
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* @ARMV7_PMNC_ENABLE, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %5, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @cp15_pmcr_set(i32 %11)
  store i32 -1, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @cp15_pmcnten_clr(i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @cp15_pminten_clr(i32 %15)
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @cp15_pmovsr_set(i32 %17)
  ret i32 0
}

declare dso_local i32 @cp15_pmcr_get(...) #1

declare dso_local i32 @cp15_pmcr_set(i32) #1

declare dso_local i32 @cp15_pmcnten_clr(i32) #1

declare dso_local i32 @cp15_pminten_clr(i32) #1

declare dso_local i32 @cp15_pmovsr_set(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
